<resources>
    <string name="app_name">Demo</string>
    <string name="home_icon_title">首页</string>
    <string name="shop_icon_title">222</string>
    <string name="verify_icon_title">333</string>
    <string name="account_icon_title">我的</string>
    <string name="home_secondary_1">Mon</string>
    <string name="home_secondary_2">Tue</string>
    <string name="home_secondary_3">Wed</string>
    <string name="home_secondary_4">Thu</string>
    <string name="account_setting_bar">设置</string>
    <string name="account_alert_bar">消息</string>
    <string name="account_scan_bar">扫码</string>
    <string name="account_support">点赞</string>
    <string name="account_collect">收藏</string>
    <string name="account_attention">关注</string>
    <string name="account_be_attention">被关注</string>
    <string name="account_be_attention_toolbar">粉丝</string>
    <string name="account_secondary_init">0</string>
    <string name="account_detect">肤质检测</string>
    <string name="account_assess">考核</string>
    <string name="account_nars">AR试色</string>
    <string name="account_support_service">客服中心</string>
    <string name="account_makeup">化妆台</string>
    <string name="account_appraisal">鉴定</string>
    <string name="account_achievement">成就</string>
    <string name="account_pair">配对</string>
    <string name="account_setting_user">账号安全</string>
    <string name="account_setting_universal">通用</string>
    <string name="account_setting_feedback">帮助与反馈</string>
    <string name="account_setting_aboutUs">关于我们</string>
    <string name="account_setting_quit">退出登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Version">Version</string>
    <string name="version_update">版本更新</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="go_score">去评分</string>
    <string name="contact_us">联系我们</string>
    <string name="copyright">Copyright©</string>
    <string name="push_message">消息推送</string>
    <string name="clear_cache">清理缓存</string>
    <string name="privacy_authority">隐私权限</string>
    <string name="verify_id">实名认证</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_mail">绑定邮箱</string>
    <string name="question_feedback">问题反馈</string>
    <string name="staff_service">人工服务</string>
    <string name="attention_user">用户</string>
    <string name="attention_topic">话题</string>
    <string name="my_attention">我的关注</string>
    <string name="my_collect">我的收藏</string>
    <string name="login_tips">登录后继续操作</string>
    <string name="exit_tips">再按一次退出</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="login_account_title">账号</string>
    <string name="login_password_title">密码</string>
    <string name="login_password_verify_title">确认密码</string>
    <string name="login_account_input">输入手机号</string>
    <string name="login_password_input">6-20位以内字符组合</string>
    <string name="NULL_ACCOUNT">请点击登录</string>
    <string name="register_tip">账号或密码不正确</string>
    <string name="logout_tip">是否退出登录</string>
    <string name="survey_nature">干油性问卷</string>
    <string name="survey_sensitive">敏感性问卷</string>
    <string name="survey_NotComplete_tip">未完成</string>
    <string name="survey_complete_tip">已完成</string>


</resources>
