<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/account_alert"
        android:orderInCategory="100"
        android:title="@string/account_alert_bar"
        app:actionLayout="@layout/account_menu_layout_alert"
        app:showAsAction="always" />
    <item
        android:id="@+id/account_setting"
        android:orderInCategory="101"
        android:title="@string/account_setting_bar"
        app:actionLayout="@layout/account_menu_layout_setting"
        app:showAsAction="always" />
    <item
        android:id="@+id/account_scan"
        android:title="@string/account_scan_bar"
        app:actionLayout="@layout/account_menu_layout_scan"
        app:showAsAction="ifRoom" />
</menu>