<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerMotionlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/fragment_register_scene"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tips"
        android:textColor="@color/black"
        android:textSize="@dimen/login_title"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4375" />

    <ImageView
        android:id="@+id/imageView_quitRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline49"
        app:layout_constraintEnd_toStartOf="@+id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_back" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account_title"
        android:textColor="@color/black"
        android:textSize="@dimen/login_title_secondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline71"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password_title"
        android:textColor="@color/black"
        android:textSize="@dimen/login_title_secondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline53"
        app:layout_constraintVertical_bias="0.50" />

    <com.example.demo.ClassHelper.EditTextWithClear
        android:id="@+id/et_account"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_account_input"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="@dimen/login_number_input"
        android:textStyle="bold"
        app:clearIcon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline56"
        app:layout_constraintTop_toTopOf="@+id/guideline71" />

    <com.example.demo.ClassHelper.EditTextWithClear
        android:id="@+id/et_password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_password_input"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="@dimen/login_password_input"
        app:clearIcon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline56"
        app:layout_constraintTop_toTopOf="@+id/guideline53" />

    <com.example.demo.ClassHelper.EditTextWithClear
        android:id="@+id/et_passwordVerify"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_password_verify_title"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="@dimen/login_password_input"
        app:clearIcon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline56"
        app:layout_constraintTop_toTopOf="@+id/guideline57" />

    <Button
        android:id="@+id/button_register_execute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_register_ripple"
        android:text="@string/login_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline59"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline58" />

    <ProgressBar
        android:id="@+id/progressBar_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView_signUpTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_tip"
        android:textColor="@color/login_tip"
        android:textSize="@dimen/login_tip"
        app:layout_constraintBottom_toTopOf="@+id/guideline58"
        app:layout_constraintEnd_toStartOf="@+id/guideline55"
        app:layout_constraintStart_toStartOf="@+id/guideline54"
        app:layout_constraintTop_toTopOf="@+id/guideline52" />

</androidx.constraintlayout.motion.widget.MotionLayout>