<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginMotionlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/fragment_password_login_scene"
    tools:context=".PasswordLoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tips"
        android:textColor="@color/black"
        android:textSize="@dimen/login_title"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4375" />

    <ImageView
        android:id="@+id/imageView_quitLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline69"
        app:layout_constraintEnd_toStartOf="@+id/guideline65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_back" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account_title"
        android:textColor="@color/black"
        android:textSize="@dimen/login_title_secondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline70"
        app:layout_constraintEnd_toStartOf="@+id/guideline67"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toTopOf="@+id/guideline63"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password_title"
        android:textColor="@color/black"
        android:textSize="@dimen/login_title_secondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toStartOf="@+id/guideline67"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toTopOf="@+id/guideline70"
        app:layout_constraintVertical_bias="0.50" />

    <com.example.demo.ClassHelper.EditTextWithClear
        android:id="@+id/et_accountLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_account_input"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="@dimen/login_number_input"
        android:textStyle="bold"
        app:clearIcon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline68"
        app:layout_constraintStart_toStartOf="@+id/guideline67"
        app:layout_constraintTop_toTopOf="@+id/guideline63" />

    <com.example.demo.ClassHelper.EditTextWithClear
        android:id="@+id/et_passwordLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/login_password_input"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="@dimen/login_password_input"
        app:clearIcon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toStartOf="@+id/guideline68"
        app:layout_constraintStart_toStartOf="@+id/guideline67"
        app:layout_constraintTop_toTopOf="@+id/guideline70" />

    <Button
        android:id="@+id/button_login_execute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_register_ripple"
        android:text="@string/login_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline62"
        app:layout_constraintEnd_toStartOf="@+id/guideline68"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toTopOf="@+id/guideline61" />

    <TextView
        android:id="@+id/textView_loginTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_tip"
        android:textColor="@color/login_tip"
        android:textSize="@dimen/login_tip"
        app:layout_constraintBottom_toTopOf="@+id/guideline61"
        app:layout_constraintEnd_toStartOf="@+id/guideline68"
        app:layout_constraintStart_toStartOf="@+id/guideline66"
        app:layout_constraintTop_toTopOf="@+id/guideline60" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />
</androidx.constraintlayout.motion.widget.MotionLayout>